MA_J_23062017_Impressum/Kontakt

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,12 @@ html, body {
   transform: translateY(-80%);
 }
 
+.logo img {
+  z-index: 403
+}
+
+/* Wide Menu */
+
 .menubox {
   position: fixed;
   width: 100%;
@@ -67,6 +73,7 @@ html, body {
   z-index: 402;
 }
 
+/* Responsive Menu */
 .aboutlink {
   flex-basis: 52%;
 }
@@ -107,9 +114,189 @@ html, body {
   height: 80%;
 
   opacity: 0;
+  transition: opacity 0.5s;
+  -webkit-transition: opacity 0.5s;
+  -moz-transition: opacity 0.5s;
+  -o-transition: opacity 0.5s;
+
+  overflow: scroll;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content.visible {
   z-index: 200;
   opacity: 1;
+}
+
+.contentbox {
+  box-sizing: border-box;
+  height: 100%;
+  max-width: 800px;
+  padding: 10px;
+}
+
+/* Kontakt Styling */
+
+.divinner {
+  position: relative;
+  float: left;
+  width: 100%;
+  padding-bottom: 10px;
+  margin: 0;
+}
+
+@media (min-width: 750px) {
+  .divinner {
+    width: 50%;
+  }
+}
+
+.ajaxform p {
+
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 0;
+    -webkit-margin-start: 0;
+    -webkit-margin-end: 0;
+
+    -moz-margin-before: 1em;
+    -moz-margin-after: 0;
+    -moz-margin-start: 0;
+    -moz-margin-end: 0;
+
+    -o-margin-before: 1em;
+    -o-margin-after: 0;
+    -o-margin-start: 0;
+    -o-margin-end: 0;
+}
+
+#contactd {
+  font-size: 14px;
+  margin-top: 32px;
+  text-align: left;
+}
+
+#contactd a {
+  color: #67757B;
+  text-decoration: none;
+}
+
+#contactf label {
+  display: none;
+}
+
+.inputs {
+  background-color: #67757B;
+  color: #FFFFFF;
+  outline: none;
+  border: 3px solid rgb(204, 204, 204);
+  border: 3px solid rgba(204, 204, 204, 0);
+  -webkit-transition: 0.5s;
+  -o-transition: 0.5;
+  -moz-transition: 0.5;
+  transition: 0.5s;
+}
+
+.inputs:focus {
+  border: 3px solid #555555;
+}
+
+.shorti {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+#message {
+  resize: none;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.antispam {
+  display: none;
+}
+
+.fadein {
+  box-sizing: border-box;
+  display: none;
+
+  position: absolute;
+  width: 100%;
+  height: 40px;
+  bottom: 10px;
+  left: 0;
+  border-radius: 4px;
+
+  z-index: 400;
+  padding: 10px;
+}
+
+.fadecenter {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#popup2 {
+  background-color: #af5962;
+  color: white;
+}
+
+#popup1 {
+  background-color: #69b485;
+  color: white;
+}
+
+::-webkit-input-placeholder {
+  /* WebKit, Blink, Edge */
+  color: #FFFFFF;
+}
+
+:-moz-placeholder {
+  /* Mozilla Firefox 4 to 18 */
+  color: #FFFFFF;
+  opacity: 1;
+}
+
+::-moz-placeholder {
+  /* Mozilla Firefox 19+ */
+  color: #FFFFFF;
+  opacity: 1;
+}
+
+:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: #FFFFFF;
+}
+
+#sendbutton {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  height: 40px;
+  width: 100%;
+  background-color: #e5c334;
+  color: white;
+  padding: 14px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  outline: none;
+}
+
+#sendbutton:hover {
+  background-color: #e6a829;
+}
+
+/* Impressum Styling */
+
+#ankermarke {
+  display: inline;
+  width: 20px;
+  transform: translateY(28%);
 }
