--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,7 @@ html, body {
   position: fixed;
   width: 100%;
   height: 20%;
+  max-width: 1600px;
 
   display: flex;
   align-items: center;
@@ -73,8 +74,8 @@ html, body {
   z-index: 402;
 }
 
-.aboutlink {
-  flex-basis: 52%;
+.space {
+  width: 100px;
 }
 
 /* Responsive Menu */
@@ -213,7 +214,7 @@ html, body {
   width: 100%;
 
   box-sizing: border-box;
-  padding: 4px;
+  padding: 10px;
 }
 
 @media screen and (max-width: 750px) {
