--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,12 @@ html, body {
   transform: translateY(-80%);
 
   pointer-events: all;
+
+  z-index: 403
+}
+
+.logocontainer a {
+  z-index: 403;
 }
 
 .logo img {
@@ -94,12 +100,12 @@ html, body {
   position: absolute;
   width: 200px;
   height: auto;
-  top: 50px;
-  right: 2px;
-  background-color: rgb(103, 121, 109);
-  background-color: rgba(103, 121, 109, 0.92);
+  top: 120px;
+  right: 10px;
+  background-color: rgb(62, 73, 66);
+  background-color: rgba(62, 73, 66, 0.92);
   padding: 20px 10px;
-  z-index: 1000;
+  z-index: 900;
 
   font-family: "HalisGR-Medium", sans-serif;
   font-size: 0.9em;
@@ -116,8 +122,8 @@ html, body {
 
 .icon {
   display: none;
-  position: absolute;
-  top: 10px;
+  position: fixed;
+  top: 30px;
   right: 20px;
   color: #000000;
   text-align: center;
@@ -134,10 +140,11 @@ html, body {
     display: block;
   }
   .icon.responsive {
-    color: #67757B;
+    color: #FFFFFF;
   }
   .menuresponsive.responsive {
     display: block;
+    z-index: 900;
   }
   .menuresponsive.responsive a:hover {
     background-color: #3c474d;
