--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ html, body {
   justify-content: space-between;
   height: 100%;
   width: 80%;
-  max-width: 1600px;
+  max-width: 1000px;
   z-index: 401;
 }
 
@@ -74,6 +74,18 @@ html, body {
   z-index: 402;
   font-family: "HalisGR-Medium", sans-serif;
   font-size: 0.9em;
+}
+
+@media screen and (min-width: 1024px) {
+  .menu a {
+    font-size: 1em;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .menu a {
+    font-size: 1.1em;
+  }
 }
 
 .space {
