--- a/css/style.css
+++ b/css/style.css
@@ -465,6 +465,28 @@ html, body {
   color: white;
 }
 
+@media all and (min--moz-device-pixel-ratio:0) and (min-resolution: .001dpcm) {
+  .fadein {
+    bottom: 20px;
+  }
+}
+
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+  /* IE10+ CSS styles go here */
+  .fadein {
+    bottom: 20px;
+  }
+}
+
+/* New IE Edge Browser "fix" */
+
+@supports (-ms-ime-align: auto) {
+  /* IE Edge 12+ CSS styles go here */ 
+  .fadein {
+    bottom: 20px;
+  }
+}
+
 ::-webkit-input-placeholder {
   /* WebKit, Blink, Edge */
   color: #000000;
