--- a/css/style.css
+++ b/css/style.css
@@ -298,27 +298,42 @@ html, body {
   max-width: 1000px;
 }
 
-.grid-sizer, .grid-item {
-  width: 33%;
+.grid {
+  margin-top: 1em;
+  padding: 0;
+  -moz-column-gap: 1.5em;
+  -webkit-column-gap: 1.5em;
+  column-gap: 1.5em;
 }
 
-.grid-item--width2 {
-  width: 66%;
+.grid-item {
+  display: inline-block;
+  margin: 0 0 1em;
+  width: 100%;
 }
 
 .grid-item img {
   width: 100%;
   box-sizing: border-box;
-  padding: 10px;
 }
 
 .picturebox img {
   margin: 0 auto;
 }
 
-@media screen and (max-width: 750px) {
-  .grid-sizer, .grid-item {
-    width: 100%;
+@media only screen and (min-width: 500px) {
+  .grid {
+      -moz-column-count: 2;
+      -webkit-column-count: 2;
+      column-count: 2;
+  }
+}
+
+@media only screen and (min-width: 800px) {
+  .grid {
+      -moz-column-count: 3;
+      -webkit-column-count: 3;
+      column-count: 3;
   }
 }
 
@@ -481,7 +496,7 @@ html, body {
 /* New IE Edge Browser "fix" */
 
 @supports (-ms-ime-align: auto) {
-  /* IE Edge 12+ CSS styles go here */ 
+  /* IE Edge 12+ CSS styles go here */
   .fadein {
     bottom: 26px;
   }
